# Rubik

./: .gitattributes  .gitignore  README.md
rubik_solver/: CMakeLists.txt  main.cpp
rubik_solver/cube/: Cube.cpp  Cube.hpp  cube_defenitions.hpp
rubik_solver/heuristic_databases/: HeuristicDB.cpp  HeuristicDB.hpp  generate_db_through_bfs.cpp  generate_db_through_bfs.hpp
rubik_solver/heuristic_databases/Korf/: CornerDB.cpp  EdgeGroup1DB.cpp  EdgeGroup2DB.cpp  EdgePatternDatabase.cpp  EdgePermutationsDB.cpp  EdgePermutationsDB.hpp  KorfHeuristicDB.cpp  KorfHeuristicDB.hpp
rubik_solver/heuristic_databases/db_generators/: HeuristicsGenerator.cpp  HeuristicsGenerator.hpp  KorfHeuristicsGenerator.cpp  KorfHeuristicsGenerator.hpp
rubik_solver/heuristic_databases/korf/: CornerDB.cpp  CornerDB.hpp  EdgeGroup1DB.cpp  EdgeGroup1DB.hpp  EdgeGroup2DB.cpp  EdgeGroup2DB.hpp  EdgePermutationsDB.cpp  EdgePermutationsDB.hpp  KorfHeuristicDB.cpp  KorfHeuristicDB.hpp  korf_defenitions.hpp
rubik_solver/heuristic_databases/thistlethwaite/: CornerOrientationsPlus4EdgePermutationsDB.cpp  CornerOrientationsPlus4EdgePermutationsDB.hpp  EdgeOrientationsDB.cpp  EdgeOrientationsDB.hpp  TetradPairedPlus4EdgePermutations.cpp  TetradPairedPlus4EdgePermutations.hpp  TetradPairedPlus4EdgePermutationsDB.cpp  TetradPairedPlus4EdgePermutationsDB.hpp  ThistlethwaiteHeuristicDB.cpp  ThistlethwaiteHeuristicDB.hpp
rubik_solver/solvers/: KorfSolver.cpp  KorfSolver.hpp  Solver.cpp  Solver.hpp  ThistlethwaiteSolver.cpp  ThistlethwaiteSolver.hpp  find_solve_through_ida_star.hpp
rubik_solver/utilities/: CombinationRankMaker.hpp  DynamicBits4Buffer.hpp  DynamicBuffer.hpp  PermutationRankMaker.h  UnorderedPairSetRankMaker.hpp  combinatorics_math.hpp  logs.hpp  permutations_math.hpp
rubik_solver/visual-rubik.app/Contents/: Info.plist
rubik_solver/visual-rubik.app/Contents/MacOS/: visual
rubik_solver/visual-rubik.app/Contents/Resources/Data/: app.info  globalgamemanagers  globalgamemanagers.assets  level0  sharedassets0.assets
rubik_solver/visual-rubik.app/Contents/Resources/Data/Resources/: unity_builtin_extra
rubik_solver/visual-rubik.app/Contents/_CodeSignature/: CodeResources
visual/Assets/Materials/: Blue.mat  Green.mat  Orange.mat  White.mat  Yellow.mat
visual/Assets/Prefabs/: Cell1.prefab  Cell2.prefab  Cell3.prefab
visual/Assets/Scenes/: SampleScene.unity
visual/Assets/Scripts/: Parse.cs  RotatingCamera.cs
visual/Assets/Scripts/Rubik/: CellProcessing.cs  FaceProcessing.cs  FacetRotations.cs  Solution.cs
visual/ProjectSettings/: ProjectSettings.asset
